--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>react project</title>
+    <style>
+        #app {
+            width: 400px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
 <div id="app"></div>
