--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             margin: 0 auto;
         }
     </style>
+    <!-- 核心库 -->
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <!-- DOM相关 -->
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </head>
 <body>
 <div id="app"></div>
